Removed Fedora instructions, revised for DSpace
A number of Fedora-specific instructions were accidentally left behind in the README, they have been removed and replaced with DSpace-specific information.